--- a/experiment.html
+++ b/experiment.html
@@ -12,8 +12,56 @@
 </head>
 
 <body>
-
-
+<div id="wrapper">
+<div id="left_content"></div>
+<div id="right_content"></div>
+</div>
+<div id="labeldiv">
+<ul id="labeltable">
+        <li class="labels">
+			<color style="color: #E00013;">red</color> <br/>
+			<color style="color: #339900;">green</color> <br/>
+			<color style="color: #FF9900;">orange</color> <br/>
+			<color style="color: #9E9696;">grey</color> 
+		</li>
+		 <li class="labels">
+			>400 <br/>
+			<300 </br>
+			300-400 </br>
+			no data </br>
+			<div id="behaviorslider"></div>
+			<label for="count1">Behavior count:</label>
+    		<input type="text" id="count1" style="border: 0; color: #f6931f; font-weight: bold;" />
+		</li>
+		<li class="labels">
+			>10 </br>
+			<7	</br>
+			7-10 </br>
+			no data </br>
+			<div id="medicationslider"></div>
+			<label for="count2">Meds count:</label>
+    		<input type="text" id="count2" style="border: 0; color: #f6931f; font-weight: bold;" />
+		</li>
+		<li class="labels">
+			>8.5 </br>
+			<7	 </br>
+			7-8.5 </br>
+			no data </br>
+			<div id="sleepslider"></div>
+			<label for="count3">Sleep avg:</label>
+    		<input type="text" id="count3" style="border: 0; color: #f6931f; font-weight: bold;" />
+		</li>
+		<li class="labels">
+			>1 </br>
+			<0.7 </br>
+			0.7-1 </br>
+			no data </br>
+			<div id="bmslider"></div>
+			<label for="count4">BM count:</label>
+    		<input type="text" id="count4" style="border: 0; color: #f6931f; font-weight: bold;" />	
+		</li>
+</ul>
+</div>
 
 </body>
 </html>
