--- a/experiment.html
+++ b/experiment.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Testftw!</title>
@@ -14,9 +13,8 @@
 		<div id="labeldiv">
 			<ul id="labeltable">
 	        	<li class="labels side_text">
-	        		Slide to set range:<br/>
-	        		Left side slider value sets the minimum threshold<br/>
-	        		Right side slider value sets the maximum threshold<br/>
+	        		<h4>Range slider:</h4><br/>
+	        		Use sliders to set the range for each column:<br/>
 				</li>
 				 <li class="labels">
 					<div id="behaviorslider"></div>
@@ -25,7 +23,7 @@
 				</li>
 				<li class="labels">
 					<div id="medicationslider"></div>
-					<label class="side_text" for="count2">Meds count:</label>
+					<label class="side_text" for="count2">Medication count:</label>
 		    		<input type="text" id="count2" style="border: 0; color: #1f82f6; font-weight: bold;" />
 				</li>
 				<li class="labels">
@@ -35,15 +33,14 @@
 				</li>
 				<li class="labels">
 					<div id="bmslider"></div>
-					<label class="side_text" for="count4">BM count:</label>
+					<label class="side_text" for="count4">Bowel Movement count:</label>
 		    		<input type="text" id="count4" style="border: 0; color: #1f82f6; font-weight: bold;" />	
 				</li>
-
 				<li class="labels side_text">
-					<color style="color: #A52A2A;">Red</color> signifies value greater than Maximum threshold.<br/>
-					<color style="color: #41AB5D;">Green</color> signifies value less than Minimum threshold.<br/>
-					<color style="color: #EE9A49;">Orange</color> signifies value between the two threshold.<br/>
-					<color style="color: #D9D9D9;">Grey</color> signifies missing data.
+					<color style="color: #A52A2A;">Red</color> signifies it is beyond harmful threshold.<br/>
+					<color style="color: #41AB5D;">Green</color> signifies it is within the acceptable threshols.<br/>
+					<color style="color: #EE9A49;">Orange</color> signifies it is between acceptable and harmful threshold.<br/>
+					<color style="color: #8B8989;">Grey</color> signifies missing data.
 				</li>
 			</ul>
 		</div>
